// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantNote is a pencil icon button icon if the user has edit permissions and there is a note 1`] = `
<DocumentFragment>
  <button
    aria-label="Edit note"
    class="chakra-button css-1jyk1h1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </g>
    </svg>
  </button>
</DocumentFragment>
`;

exports[`VariantNote is a plus icon button icon if the user has edit permissions and there is no note 1`] = `
<DocumentFragment>
  <button
    aria-label="Add note"
    class="chakra-button css-1jyk1h1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`VariantNote is an eyes icon if the user does not have edit permissions and there is a note 1`] = `
<DocumentFragment>
  <button
    aria-label="View note"
    class="chakra-button css-1jyk1h1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g
        fill="currentColor"
      >
        <path
          d="M23.432,10.524C20.787,7.614,16.4,4.538,12,4.6,7.6,4.537,3.213,7.615.568,10.524a2.211,2.211,0,0,0,0,2.948C3.182,16.351,7.507,19.4,11.839,19.4h.308c4.347,0,8.671-3.049,11.288-5.929A2.21,2.21,0,0,0,23.432,10.524ZM7.4,12A4.6,4.6,0,1,1,12,16.6,4.6,4.6,0,0,1,7.4,12Z"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
      </g>
    </svg>
  </button>
</DocumentFragment>
`;

exports[`VariantNote is blank if the user does not have edit permissions and there is no note 1`] = `<DocumentFragment />`;
